Added date field type, other enhancements.

--- a/src/app/dynamic-apply-now/dynamic-apply-now.component.html
+++ b/src/app/dynamic-apply-now/dynamic-apply-now.component.html
@@ -1,6 +1,7 @@
 <div class="well">
   Pendings:
   <ul>
+    <li>Add proper errors for network conectivity. </li>
     <li>Test</li>
     <li>To load the states on a promise after it is loaded.</li>
     <li>add date and time input (Begin and End Date)</li>
@@ -8,6 +9,7 @@
     <li>generate in memory database</li>
     <li>Test again - review testing concepts from meeting</li>
     <li>execute crud operations on this page</li>
+    
   </ul>
 </div>
 <div *ngIf="dataRoot">
