--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,10 +7,10 @@
         <a class="navbar-brand" href="#">Rentals</a>
       </div>
       <ul class="nav navbar-nav">
-        <li><a href="#">Home</a></li>
+        <li routerLinkActive="active"><a routerLink="/welcome">Home</a></li>
         <li><a href="#">Properties</a></li>
-        <li [class.active]="isUrlMatch('applynow')"><a routerLink='/applynow' >Apply Now</a></li>
-        <li [class.active]="isUrlMatch('dapplynow')"><a routerLink='/dapplynow' >Dynamic Apply Now</a></li>
+        <li routerLinkActive="active"><a routerLink='/applynow' >Apply Now</a></li>
+        <li routerLinkActive="active"><a routerLink='/dapplynow' >Dynamic Apply Now</a></li>
         <li><a href="#">Policies</a></li>
         <li><a href="#">About us</a></li>
         <li><a href="#">Contact us</a></li>
