Multiple changes of all kinds

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
       </div>
       <ul class="nav navbar-nav">
         <li routerLinkActive="active"><a routerLink="/welcome">Home</a></li>
-        <li><a href="#">Properties</a></li>
+        <li routerLinkActive="active"><a routerLink='/props' >Properties</a></li>
         <li routerLinkActive="active"><a routerLink='/applynow' >Apply Now</a></li>
         <li routerLinkActive="active"><a routerLink='/dapplynow' >Dynamic Apply Now</a></li>
         <li><a href="#">Policies</a></li>
